Fixed sidebar icons visible and added log in and register when we are not logged in

--- a/src/main/web/assets/css/sidebar.css
+++ b/src/main/web/assets/css/sidebar.css
@@ -39,6 +39,7 @@
   position: relative;
   display: block;
   width: 260px;
+  cursor: pointer;
 }
 .main-menu li>a {
   position: relative;
